0022915: crash in iges reader TransferRoots()